# libflavour

./: .gitignore  .gitlab-ci.yml  .lint  LICENSE  Makefile  README.rst  pyproject.toml  requirements.in  requirements.txt  setup.py
libflavour/: __init__.py  schema.py  utils.py
libflavour/fields/: __init__.py  base.py  scalar.py  service.py
libflavour/test/: test_entity.py  test_schema_addon.py  test_schema_project.py
libflavour/test/data/: example_addon.yaml  example_addon_data_1.yaml  example_addon_data_2.yaml  example_addon_data_3.yaml  example_addon_data_4.yaml  example_addon_data_5.yaml  example_addon_dependencies.yaml  example_addon_minimal.yaml  example_addon_minimal_error.yaml  example_aldryn_redirect.yaml  example_project.yaml  example_project_minimal_1.yaml  example_project_minimal_1_error.yaml  example_project_minimal_2.yaml  example_project_minimal_2_error.yaml
