[tool.poetry]
name = "libflavour"
version = "0.0.17"
description = ""
readme = "README.rst"
authors = ["Dennis Schwertel <dennisschwertel@gmail.com>"]

[tool.poetry.dependencies]
python = "^2.7"
strictyaml = ""
attrs = ""
python-slugify = ""

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

